[package]
name = "y-rb"
version = "0.1.1"
authors = ["Hannes Moser <box@hannesmoser.at>", "Hannes Moser <hmoser@gitlab.com>"]
edition = "2021"
homepage = "https://github.com/y-crdt/yrb"
repository = "https://github.com/y-crdt/yrb"

[dependencies]
lazy_static = "1.4.0"
rutie = "0.8.4"
yrs = "0.9.1"
lib0 = "0.9.1" # must match yrs version

[lib]
name = "y_rb"
crate-type = ["cdylib"]

[package.metadata.thermite]
github_releases = true
github_release_type = "latest"
git_tag_regex = "^v(\\d+\\.\\d+\\.\\d+)-rust$"
