[package]
name = "yrb"
version = "0.5.6"
authors = ["Hannes Moser <box@hannesmoser.at>"]
edition = "2021"
homepage = "https://github.com/y-crdt/yrb"
repository = "https://github.com/y-crdt/yrb"

[dependencies]
magnus = "=0.6.4"
thiserror = "2.0.7"
yrs = "=0.17.4"
y-sync = "=0.4.0"
rb-sys = "0.9.104"

[dev-dependencies]
magnus = { version = "0.6.4", features = ["embed"] }

[lib]
name = "yrb"
crate-type = ["cdylib"]
