[package]
name = "yrb"
version = "0.6.0"
authors = ["Hannes Moser <box@hannesmoser.at>"]
edition = "2021"
homepage = "https://github.com/y-crdt/yrb"
repository = "https://github.com/y-crdt/yrb"

[dependencies]
magnus = "=0.7.1"
thiserror = "2.0.17"
yrs = "=0.17.4"
y-sync = "=0.4.0"
rb-sys = { version = "0.9", features = ["stable-api-compiled-fallback"] }

[dev-dependencies]
magnus = { version = "0.7", features = ["embed"] }

[lib]
name = "yrb"
crate-type = ["cdylib"]
